Clean up and fix alignment issues with modal

--- a/segway-v2/assets/css/style.css
+++ b/segway-v2/assets/css/style.css
@@ -229,7 +229,9 @@ img {
 
 #articles .post figure {
   margin: 0;
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #articles .post img {
@@ -237,7 +239,9 @@ img {
   box-shadow: none;
 }
 
-
+#articles .post figcaption{
+  margin-top: 0.5rem;
+}
 
 
 /* ------------- Hero --------------- */
@@ -328,6 +332,7 @@ img {
 .newWindow::-webkit-scrollbar-track {
 	-webkit-box-shadow: inset 0 0 6px #f5f5f5;
 	background-color: #cccccc;
+	
 }
 
  /*Handle */
@@ -397,6 +402,16 @@ body::-webkit-scrollbar-thumb:hover {
   flex-direction: column;
   align-items: center;
   padding: 0 1rem;
+}
+
+.tempArticle header{
+  max-width: 75%;
+}
+
+.tempArticle figure{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .tempArticle img{
